--- a/cat sitting.html
+++ b/cat sitting.html
@@ -9,7 +9,7 @@
     <title>Cat Sitting</title>
 </head>
 <body>
-  <a href="home.html">
+  <a href="index.html">
     <button class="corner-button">Home</button>
   </a>
     
