--- a/portfolio.html
+++ b/portfolio.html
@@ -127,7 +127,22 @@
             <h2>Python Games</h2>
             <p>Made a flappy bird and worldle game into one using pygame.</p>
         </div>
+
+        <div class="project">
+            <img src="https://m.media-amazon.com/images/I/71A14Sz2bWL.jpg" alt="Web Scraping">
+            <h2>Raspberry Pi</h2>
+            <p>Raspberry Pi motion activated camera, and ultrasonic sensor for security system</p>
+        </div>
+
+        <div class="project">
+            <img src="https://miro.medium.com/v2/resize:fit:1400/1*8gmgaAkFdI-9OHY5cA93xQ.png" alt="Web Scraping">
+            <h2>Computer Vision</h2>
+            <p>Used Computer Vision to track facial expersion with Google's mediapipe library</p>
+        </div>
+
     </div>
 
+
+    
 </body>
 </html>
