--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <h2>About Me</h2>
             <p>Hello! I'm Alden, a passionate programmer with a solid Python background. Recently, 
                 I've started improving my knowledge of web programming, using Python and JavaScript.
-                 I doing the Harvard CS50 web development course, which is teaching me how to create dynamic,
+                 I'm doing the Harvard CS50 web development course, which is teaching me how to create dynamic,
                  responsive websites using the Django web framework. I'm now looking for career opportunities 
                  where I can apply my programming skills and advance in the field of web development.<br><br>
                 Work experience: <a href="cat sitting.html">Here</a>
