--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
             padding: 0 20px;
             background-color: #444;
             border: 5px solid;
+            border-radius: 25px;
         }
         .about, .portfolio, .contact {
             margin-bottom: 40px;
+            
         }
         footer {
             background-color: #333;
@@ -79,6 +81,17 @@
           font-weight: bolder;
           text-decoration: underline;
         }
+
+        a:hover {
+          color: rgb(157, 255, 0);
+          background-color: transparent;
+          text-decoration: underline;
+        }
+        mark {
+        background-color: #444;
+        color: rgb(32, 138, 39);
+        }
+
     </style>
 </head>
 <body>
@@ -92,10 +105,10 @@
     <div class="container">
         <section id="about" class="about">
             <h2>About Me</h2>
-            <p>Hello! I'm Alden, a passionate programmer with a solid Python background. Recently, 
-                I've started improving my knowledge of web programming, using Python and JavaScript.
-                 I'm doing the Harvard CS50 web development course, which is teaching me how to create dynamic,
-                 responsive websites using the Django web framework. I'm now looking for career opportunities 
+            <p>I'm a passionate programmer with a <mark>mostly Python</mark> background. Recently, 
+                I've started improving my knowledge of web programming, using <mark>Python</mark> and <mark>JavaScript.</mark>
+                 I'm doing the <mark>Harvard CS50</mark> web development course, which is teaching me how to create dynamic,
+                 responsive websites using the <mark>Django</mark> web framework. I'm now looking for career opportunities 
                  where I can apply my programming skills and advance in the field of web development.<br><br>
                 Work experience: <a href="cat sitting.html">Here</a>
                 </p>
