--- a/portfolio.html
+++ b/portfolio.html
@@ -36,12 +36,27 @@
             text-align: center;
         }
 
+        .project:hover {
+            background-color: #2f6900;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(255, 255, 255, 0.1);
+            text-align: center;
+        }
+
+
         .project img {
             width: 100%;
             height: 200px;
             object-fit: cover;
             border-radius: 8px;
             margin-bottom: 15px;
+        }
+
+        .project:hover img {
+            box-sizing: border-box;
+            border: 5px solid rgb(255, 255, 255);
+
         }
 
         .project h2 {
